	PR target/60693 	* config/i386/i386.c (ix86_copy_addr_to_reg): Call copy_addr_to_reg 	also if addr has VOIDmode.

* gcc.target/i386/pr60693.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@208915 138bc75d-0d04-0410-961f-82ee72b054a4